--- a/src/pages/multi2/index.scss
+++ b/src/pages/multi2/index.scss
@@ -15,7 +15,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
-    background-color: linear-gradient(to right, rgb(255,65,108), rgb(255,75,43));
+    background: linear-gradient(to right, rgb(255,65,108), rgb(255,75,43));
 
 }
 
@@ -31,7 +31,7 @@
 
 }
 
-.slider-div{
+.slides-div{
     display: flex;
     align-items: center;
     justify-content: center;
